Added display activity
When a fish is selected from a list, it will now be displayed in a new
activity.

--- a/app/src/main/res/layout/activity_display_fish.xml
+++ b/app/src/main/res/layout/activity_display_fish.xml
@@ -7,6 +7,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".browse.BrowseActivity">
+    tools:context="com.example.jesper.svenskfisk.display.DisplayFishActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/fishText"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
