--- a/app/src/main/res/layout/activity_display_fish.xml
+++ b/app/src/main/res/layout/activity_display_fish.xml
@@ -17,4 +17,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fishImage"
+        android:layout_below="@+id/fishText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
 </RelativeLayout>
