--- a/app/src/main/res/layout/activity_display_fish.xml
+++ b/app/src/main/res/layout/activity_display_fish.xml
@@ -19,10 +19,13 @@
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fishImage"
         android:layout_below="@+id/fishText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:cropToPadding="false"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop" />
 </RelativeLayout>
