Added more features to DisplayFishView

--- a/app/src/main/res/layout/activity_display_fish.xml
+++ b/app/src/main/res/layout/activity_display_fish.xml
@@ -9,33 +9,130 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.jesper.svenskfisk.display.DisplayFishActivity">
 
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/fishText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/scrollView" >
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/fishImage"
-        android:layout_marginTop="49dp"
-        android:cropToPadding="false"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:layout_below="@+id/fishText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/sciText"
-        android:layout_alignParentEnd="false"
-        android:layout_below="@+id/fishText" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/fishText"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/sciText"
+                android:layout_alignParentEnd="false"
+                android:layout_below="@+id/fishText" />
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fishImage"
+                android:layout_marginTop="49dp"
+                android:cropToPadding="false"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:layout_below="@+id/fishText"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Platser"
+                android:id="@+id/locHeader"
+                android:layout_marginTop="23dp"
+                android:layout_below="@+id/fishImage"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="@color/abc_input_method_navigation_guard" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/locationText"
+                android:layout_below="@+id/locHeader"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Vatten"
+                android:id="@+id/waterHeader"
+                android:layout_marginTop="23dp"
+                android:textColor="@color/abc_input_method_navigation_guard"
+                android:layout_below="@+id/locationText"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/waterText"
+                android:layout_below="@+id/waterHeader"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Fiske metoder"
+                android:id="@+id/methodHeader"
+                android:layout_marginTop="23dp"
+                android:textColor="@color/abc_input_method_navigation_guard"
+                android:layout_below="@+id/waterText"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/methodText"
+                android:layout_below="@+id/methodHeader"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Vikt"
+                android:id="@+id/weightHeader"
+                android:layout_marginTop="23dp"
+                android:textColor="@color/abc_input_method_navigation_guard"
+                android:layout_below="@+id/methodText"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/weightText"
+                android:layout_below="@+id/weightHeader"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
