Finished Identify fish

--- a/app/src/main/res/layout/activity_fish_list.xml
+++ b/app/src/main/res/layout/activity_fish_list.xml
@@ -9,4 +9,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.jesper.svenskfisk.identification.FishListActivity">
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView3" >
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/vbox"
+            android:baselineAligned="true"></LinearLayout>
+    </ScrollView>
 </RelativeLayout>
